--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gsap": "^3.13.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router": "^7.9.6",
     "react-use-measure": "^2.1.7",
     "tailwindcss": "^4.1.17"
   },
