--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
     "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "firebase-tools": "^14.27.0",
     "gsap": "^3.13.0",
     "react": "^19.2.0",
